Switch to Spring Boot